<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenXC Enabler</string>
    <string name="active_connections">Active Connections</string>
    <string name="message_count_label">Messages Received</string>
    <string name="bytes_per_second_label">Bytes Per Second</string>
    <string name="messages_per_second_label">Messages Per Second</string>
    <string name="average_message_size_label">Average Message Size</string>
    <string name="connection_file">File</string>
    <string name="connection_bluetooth">Bluetooth</string>
    <string name="connection_usb">USB</string>
    <string name="connection_network">Network</string>
    <string name="connection_none">None</string>
    <string name="bluetooth_search_button">Search for Bluetooth VI</string>
    <string name="get_vin_button">Get Vin</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="restart_button">Restart Trace</string>
    <string name="splittrace_button">Split Trace</string>
    <string name="startstop_button">Stop Trace</string>

    <string name="settings">Settings</string>
    <string name="recording_preferences">Recording</string>
    <string name="data_source_preferences">Data Sources</string>
    <string name="about_preferences">About</string>
    <string name="notification_preferences">Notification</string>
    <string name="gps_settings">GPS</string>
    <string name="notification_settings">NOTIFICATION</string>
    <string name="output_preferences">Output</string>
    <string name="bluetooth_settings">Bluetooth</string>
    <string name="recording_checkbox_title">Record Trace</string>
    <string name="recording_checkbox_summary">Record the vehicle data stream to a file</string>
    <string name="recording_directory_title">Output Directory</string>
    <string name="recording_directory_summary">Save recorded traces in this directory</string>
    <string name="uploading_checkbox_title">Upload Trace</string>
    <string name="uploading_checkbox_summary">Upload the vehicle data stream to a remote web server</string>
    <string name="uploading_path_title">Target URL</string>
    <string name="uploading_path_summary">Send trace data to this URL</string>
    <string name="uploading_source_name_title">API Source Name</string>
    <string name="uploading_source_name_summary">Retrieve your uploaded data using this source name in the API</string>
    <string name="native_gps_checkbox_title">Use built-in GPS</string>
    <string name="power_drop_checkbox_title">Power Drop</string>
    <string name="network_drop_checkbox_title">Network Drop</string>
    <string name="usb_drop_checkbox_title">USB Drop</string>
    <string name="native_gps_checkbox_summary">For vehicles without a GPS receiver, send the host\'s built-in GPS location instead</string>
    <string name="gps_overwrite_checkbox_title">Overwrite Native GPS</string>
    <string name="gps_overwrite_checkbox_summary">Overwrite Android native GPS values with those from the vehicle (if available)</string>
    <string name="bluetooth_polling_title">Use background polling to detect a BT VI</string>
    <string name="bluetooth_polling_summary">To save battery life, disable this if your VI can act as a Bluetooth master</string>
    <string name="bluetooth_mac_title">Bluetooth device address</string>
    <string name="bluetooth_mac_automatic_option">Automatically detect</string>
    <string name="bluetooth_mac_automatic_summary">Automatically connect to paired OpenXC-VI device</string>
    <string name="network_settings">Network</string>
    <string name="network_host_title">Network host address</string>
    <string name="network_port_title">Network port</string>
    <string name="trace_source_settings">Trace file playback</string>
    <string name="trace_source_file_title">Select a trace file for playback</string>
    <string name="phone_source_settings">Built-In Phone Sensors</string>
    <string name="trace_disable_playing">Trace Disable Playing Loop</string>
    <string name="phone_source_polling_checkbox_title">Include Data from Phone Sensors</string>
    <string name="trace_disable_playing_checkbox_title">Disable Trace Playing In Loop</string>
    <string name="about_summary">About OpenXC</string>
    <string name="notification_summary">NOTIFICATION OpenXC</string>
    <string name="application_version_title">Version</string>
    <string name="application_version_summary">Version Number</string>
    <string name="application_version_key">application_version</string>
    <string name="application_license_link">Tap here to view license info</string>
    <string name="application_license_key">license_key</string>
    <string name="application_license_title">License</string>
    <string name="application_license_summary">Copyright (c) 2012 Ford Motor Company
All rights reserved.\n\n

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:\n\n
        \t* Redistributions of source code must retain the above copyright
      notice, this list of conditions and the following disclaimer.\n
        \t* Redistributions in binary form must reproduce the above copyright
      notice, this list of conditions and the following disclaimer in the
      documentation and/or other materials provided with the distribution.\n
        \t* Neither the name of the \'organization\' nor the
      names of its contributors may be used to endorse or promote products
      derived from this software without specific prior written permission.\n\n

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL \'COPYRIGHT HOLDER\' BE LIABLE FOR ANY
DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="service_not_running">VehicleService not running.</string>

    <string name="bus_label">Bus</string>
    <string name="message_id_label">Message ID (hex)</string>
    <string name="message_payload_label">Payload (hex)</string>
    <string name="diag_request_mode_label">Mode (hex)</string>
    <string name="diag_request_pid_label">PID (hex, optional)</string>
    <string name="command_label">Command</string>
    <string name="enabled_label">Enabled</string>
    <string name="bypass_label">Bypass</string>
    <string name="format_label">Format</string>
    <string name="custom_input_label">Custom Command Input</string>

    <string name="last_diag_request_label">Last Request</string>
    <string name="diag_response_label">Responses</string>
    <string name="send_button">Send</string>
    <string name="last_can_message_sent_label">Sent Messages</string>

    <string name="dtc_button">Request DTC(s)</string>
    <string name="no_dtc_responses_received">No DTC responses received.</string>
    <string name="dtc_wait_time_note">Note: Searching for DTCs in your vehicle could take up to 5 minutes. You must remain on this screen during the scan.</string>

    <string name="no_can_messages_received">No CAN messages received.</string>
    <string name="no_can_messages_sent">No CAN messages sent.</string>
    <string name="no_diagnostic_responses_received">No diagnostic responses received.</string>

    <string name="vi_version_label">VI Version</string>
    <string name="vi_device_id_label">VI Device ID</string>

    <string name="view_traces">view_traces</string>
    <string name="view_recorded_traces">View Recorded Traces</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="recorded_traces">Recorded Traces</string>
    <string name="vi_device_platform_label">VI Platform</string>
    <string name="get_vin_label">VIN</string>
    <string name="input_json_error">Please enter a valid json</string>

    <string name="dweeting_checkbox_title">Send Data to Dweet.io</string>
    <string name="dweeting_checkbox_summary">Enables sending data to Dweet.io cloud messaging service</string>
    <string name="dweeting_thingname_title">Thing-name</string>
    <string name="dweeting_thingname_summary">Set Dweet.io thing-name</string>
    <string name="dweeting_thingname_default">openxc-dweet</string>

</resources>
