<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
    android:minHeight="48dp">

    <TextView
        android:id="@+id/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_summary"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/version_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_version_title"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/version_number"
        android:layout_width="wrap_content"
        android:paddingLeft="4dp"
        android:layout_height="wrap_content"
        android:text="@string/application_version_summary"
        android:textSize="12sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="#FFFFFF"
        />

    <TextView
        android:id="@+id/license_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_license_title"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/license_summary"
        android:layout_width="wrap_content"
        android:paddingLeft="4dp"
        android:layout_height="wrap_content"
        android:text="@string/application_license_summary"
        android:textSize="12sp"
        />

</LinearLayout>
</ScrollView>
