<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/EnablerFragment"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/ItemRow">

            <TextView
                style="@style/FormInputLabel"
                android:text="@string/bus_label" />

            <Spinner
                android:id="@+id/bus_spinner"
                style="@style/ItemData"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/ItemRow">

            <TextView
                style="@style/FormInputLabel"
                android:text="@string/message_id_label" />

            <EditText
                android:id="@+id/message_id"
                android:maxLength="3"
                style="@style/HexTextField">

                <requestFocus />
            </EditText>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/ItemRow"
            android:orientation="vertical" >

            <TextView
                style="@style/FormInputLabel"
                android:text="@string/message_payload_label" />

            <EditText
                android:id="@+id/message_payload"
                android:maxLength="16"
                android:layout_width="match_parent"
                style="@style/HexTextField">

                <requestFocus />
            </EditText>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/send_request"
        style="@style/MinimalButton"
        android:text="@string/send_button" />

    <LinearLayout
            style="@style/ItemRow"
            android:orientation="vertical" >
        <TextView
            style="@style/ItemLabel"
            android:text="@string/last_can_message_sent_label" />

        <include android:id="@+id/last_message"
                layout="@layout/can_message_list_item"/>

    </LinearLayout>

</LinearLayout>
