<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/EnablerFragment"
    android:orientation="vertical" >

    <Button
        android:id="@+id/dtc_request_button"
        style="@style/FullButton"
        android:text="@string/dtc_button" />

    <LinearLayout
            style="@style/ItemRow"
            android:orientation="vertical" >
        <TextView
            style="@style/NoteLabel"
            android:text="@string/dtc_wait_time_note" />
        <ProgressBar
            android:id="@+id/p_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="4606"
            android:indeterminate="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="10sp" />
        <TextView
            style="@style/ItemLabel"
            android:text="@string/diag_response_label" />

        <!-- The frame layout is here since we will be showing either
        the empty view or the list view.  -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >
            <!-- Here is the list. Since we are using a ListActivity, we
                 have to call it "@android:id/list" so ListActivity will
                 find it -->
            <ListView android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawSelectorOnTop="false"/>

            <!-- Here is the view to show if the list is empty -->
            <TextView android:id="@android:id/empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/no_dtc_responses_received"/>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>
